erDiagram
    USUARIO ||--o| CLIENTE : posee
    CLIENTE ||--o{ RESERVA : realiza
    HABITACION ||--o{ RESERVA : asigna
    RESERVA ||--o{ PAGO : registra
    RESERVA ||--o{ RESERVA_SERVICIO : incluye
    SERVICIO ||--o{ RESERVA_SERVICIO : agrega
    RESERVA ||--o| CHECK_IN : inicia
    RESERVA ||--o| CHECK_OUT : finaliza
    USUARIO {
      bigint id PK
      string correo
      string rol
    }
    CLIENTE {
      bigint id PK
      bigint usuario_id FK
      string nombres
    }
    RESERVA {
      bigint id PK
      bigint cliente_id FK
      bigint habitacion_id FK
      date fecha_inicio
      date fecha_fin
      string estado
    }
    HABITACION {
      bigint id PK
      string numero
      string estado
    }
    PAGO {
      bigint id PK
      bigint reserva_id FK
      decimal monto
    }
    SERVICIO {
      bigint id PK
      string nombre
      decimal precio
    }
    RESERVA_SERVICIO {
      bigint id PK
      bigint reserva_id FK
      bigint servicio_id FK
    }
    CHECK_IN {
      bigint id PK
      bigint reserva_id FK
      datetime fecha
    }
    CHECK_OUT {
      bigint id PK
      bigint reserva_id FK
      datetime fecha
    }
